<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/lblUsername"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="24dp"
	            android:labelFor="@+id/txtUsername"
	            android:text="@string/lblUsername" />

	        <EditText
	            android:id="@+id/txtUsername"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="15dp"
	            android:ems="10"
	            android:inputType="text" >
	            <requestFocus />
	        </EditText>
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >

	        <TextView
	            android:id="@+id/lblPassword"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="24dp"
	            android:labelFor="@+id/txtPassword"
	            android:text="@string/lblPassword" />

	        <EditText
	            android:id="@+id/txtPassword"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="15dp"
	            android:ems="10"
	            android:inputType="textPassword" >
	        </EditText>
	    </LinearLayout>
	    
	    <RadioGroup
	        android:id="@+id/radUserGroup"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:orientation="horizontal" >

	        <RadioButton
	            android:id="@+id/radBtnFirefighter"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/firefighter_radio_btn" />

	        <RadioButton
	            android:id="@+id/radBtnCommander"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="30dp"
	            android:text="@string/commander_radio_btn" />
	    </RadioGroup>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="69dp"
	        android:orientation="horizontal" >
	        
		    <TextView
		        android:id="@+id/lblengine_no"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"

		        android:text="@string/engine_no" />
	
		    <Spinner
		        android:id="@+id/engine_spinner"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp" />
		</LinearLayout>
	    
	    <Button
	        android:id="@+id/btnLogin"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="15dp"
	        android:text="@string/login_submit" />
	    
	    
	</LinearLayout>

</ScrollView>
